vendor/vnc/Server.h



/**
 * Callback receiving connection-related notifications for a Server.
 *
 * @see vnc_Server_setConnectionCallback().
 */
typedef struct {
  /**
   * Notification that a connection has successfully started.
   *
   * This callback is notified when a Viewer has successfully authenticated and
   * been granted a set of session permissions.
   *
   * It is optional to define a callback function of this type.  Note that this
   * callback is the only way to obtain a pointer to the @ref vnc_Connection
   * object identifying this Viewer, required by some method calls.
   *
   * This @ref vnc_Connection object is guaranteed to be valid until
   * vnc_Server_ConnectionCallback::connectionEnded notifies you that it has
   * been destroyed.
   *
   * The connection count, as returned by vnc_Server_getConnectionCount(), is
   * incremented @em before this callback is called.
   *
   * @param connection The new connection.
   */
  void
  (*connectionStarted)(void* userData,
                       vnc_Server* server,
                       vnc_Connection* connection);

  /**
   * Notification that a connection has ended.
   *
   * A callback of this type is made when a Viewer explicitly disconnects from
   * the Server, or a VNC Cloud or other network error has occurred.
   *
   * Note this callback function is called even if you call
   * vnc_Server_disconnect() or vnc_Server_disconnectAll() to terminate
   * connections yourself.
   *
   * Only connections which have successfully authenticated and received a
   * vnc_Server_ConnectionCallback::connectionStarted notification are notified
   * throw this ended notification.
   *
   * It is optional to define a callback function of this type, but note that
   * memory corruption will occur if you call vnc_Server_disconnect() on a
   * freed @ref vnc_Connection, so you must use this callback if you maintain a
   * list of connected viewers.
   *
   * The connection count, as returned by vnc_Server_getConnectionCount(), is
   * decremented @em after this callback is called.
   *
   * @param connection The viewer connection which has ended.
   */
  void
  (*connectionEnded)(void* userData,
                     vnc_Server* server,
                     vnc_Connection* connection);
} vnc_Server_ConnectionCallback;


/**
 * Creates a Server running as a service.  Note only one @ref vnc_Server should
 * exist in your application at a time.
 *
 * The Server captures the machine's console, which may be a logged-in user
 * session or a login prompt.  Running as a service requires elevated
 * privileges, and must be done from a Windows Service (Windows), a launch
 * daemon (Mac), or a root process (Linux).
 *
 * On Windows, the @c vncagent executable must be located within either the
 * <tt>\%ProgramFiles\%</tt> or <tt>\%ProgramFiles(x86)\%</tt> directories
 * in order to allow the injection of secure key sequences (e.g. Ctrl-Alt-Del).
 *
 * On Mac OS X, an instance of @c vncagent must separately be run in each
 * graphical session as a launch agent.  The @p agentPath provided here must
 * match the path of these launch agents in order that the SDK can communicate
 * with them.
 *
 * @param agentPath The path to the @c vncagent executable (see
 *     vnc_Server_create() for details).
 *
 * @return A new @ref vnc_Server or NULL on error, in which case call
 *     vnc_getLastError() to get the error code.
 *
 * @retval AgentError
 *     @c vncagent cannot be found or its version number does not match that
 *     of the SDK
 * @retval UnexpectedCall
 *     A @ref vnc_Server already exists in your application
 *
 * @see Use vnc_Server_create() to create a Server which captures the
 *     current session.
 *
 * @since 1.1
 */
VNC_SDK_API vnc_Server*
vnc_Server_createService(_In_opt_z_ const char* agentPath);


/**
 * Specifies a friendly name for the Server, to send to connected Viewers.
 * By default, this is the device's hostname, plus the display number
 * where appropriate.
 *
 * @param server The current Server.
 * @param name The UTF-8-encoded friendly name.
 */
VNC_SDK_API void
vnc_Server_setFriendlyName(vnc_Server* server, const char* name);


/**
 * Obtains the Server's @ref vnc_ConnectionHandler for performing connection
 * operations.
 *
 * Typically, a @ref vnc_ConnectionHandler is passed to
 * vnc_CloudListener_create() to start the Server listening for connections.
 * However, you can reverse this methodology and pass it to
 * vnc_CloudConnector_create() instead in order to connect to listening Viewers
 * if you want (see Viewer.h for more information).
 *
 * @param server The current Server.
 *
 * @return A @ref vnc_ConnectionHandler, valid for the lifetime of the Server.
 */
VNC_SDK_API vnc_ConnectionHandler*
vnc_Server_getConnectionHandler(vnc_Server* server);


/**
 * Returns the address of a particular connected Viewer.
 *
 * The format of the null-terminated string is
 * <tt>[vnccloud:\<cloud-address\>]:\<id\></tt>
 * Note the string is only guaranteed to be valid until the next method call.
 *
 * @param server The current Server.
 * @param connection The connection whose Cloud address you want.  You can
 *     obtain a @ref vnc_Connection from your callback function
 *     vnc_Server_ConnectionCallback::connectionStarted.
 *
 * @return A NULL-terminated string in the format
 *     <tt>[vnccloud:\<cloud-address\>]:\<id\></tt>.
 */
VNC_SDK_API const char*
vnc_Server_getPeerAddress(vnc_Server* server,
                          vnc_Connection* connection);



/**
 * Enumeration of disconnection flags.
 *
 * @see vnc_Server_disconnect(), vnc_Server_disconnectAll()
 *
 * @since 1.1
 */
typedef enum {
  /**
   * The disconnection message is deemed to be sufficiently important that the
   * Viewer should alert the Viewer user.
   */
  vnc_Server_DisconnectAlert = 1,
  /**
   * Set the peer's @ref vnc_Viewer_CanReconnect flag, that is, the Server
   * informs the Viewer that the server may start again soon.
   */
  vnc_Server_DisconnectReconnect = 2,
} vnc_Server_DisconnectFlags;



/**
 * Disconnects a particular Viewer, optionally specifying a message.
 *
 * @param server The current Server.
 * @param connection The connection to terminate.  You can obtain a
 *     @ref vnc_Connection from your callback function
 *     vnc_Server_ConnectionCallback::connectionStarted.
 * @param message The message to send to the Viewer.
 * @param flags Zero or more of the @ref vnc_Server_DisconnectFlags flags.
 *
 * @see vnc_Viewer_getDisconnectMessage()
 */
VNC_SDK_API void
vnc_Server_disconnect(vnc_Server* server,
                      vnc_Connection* connection,
                      const char* message,
                      int flags);


/**
 * Disconnects all Viewers, optionally specifying a message.
 *
 * @param server The current Server.
 * @param message The message to send to all Viewers.
 * @param flags Zero or more of the @ref vnc_Server_DisconnectFlags flags.
 *
 * @see vnc_Viewer_getDisconnectMessage()
 */
VNC_SDK_API void
vnc_Server_disconnectAll(vnc_Server* server,
                         const char* message,
                         int flags);


/**
 * Specifies a blacklist threshold and timeout for the Server.  By default,
 * the threshold is 5, which means that a Viewer failing to authenticate five
 * times in a row is blacklisted for the default timeout of 10 seconds.  This
 * guards against brute-force and dictionary attacks.
 *
 * To completely disable blacklisting, set @p threshold and @p timeout to 0.
 * For security reasons this is not recommended.
 *
 * @param server The current Server.
 * @param threshold A number of unsuccessful authentication attempts before
 *     blacklisting.
 * @param timeout A number of seconds before a blacklisted Viewer can attempt
 *     to authenticate again.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     @p timeout is zero or negative
 */
VNC_SDK_API vnc_status_t
vnc_Server_setBlacklist(vnc_Server* server,
                        int threshold,
                        int timeout);


/**
 * Handles a Windows Service control event.  When Server has been created via
 * vnc_Server_createService(), then Windows Service control events must be
 * forwarded to the Server so that active session can be determined. See the
 * Win32 function
 * <a href="https://msdn.microsoft.com/en-us/library/windows/desktop/ms685058(v=vs.85).aspx">RegisterServiceCtrlHandlerEx</a>
 * and the <a href="https://msdn.microsoft.com/en-us/library/windows/desktop/ms683241(v=vs.85).aspx">HandlerEx</a>
 * callback for more information.
 *
 * This function can be called for all notifications received via your @c HandlerEx
 * callback, but in particular it must be called for notifications where the
 * control code (@p dwControl) is @c SERVICE_CONTROL_SESSIONCHANGE.
 *
 * This method is designed to be called from the Service Control Dispatcher
 * thread, rather than the thread which called vnc_init().
 *
 * @param dwControl The control code passed to @c HandlerEx
 * @param dwEventType The type of event passed to @c HandlerEx
 * @param lpEventData The event data passed to @c HandlerEx
 *
 * @since 1.1
 */
VNC_SDK_API void
vnc_Server_serviceControlHandlerEx(vnc_Server* server, int dwControl,
                                   int dwEventType, void* lpEventData);

/**
 * Enables transmission of audio from the Server to the Viewer. The audio
 * stream will be automatically negotiated with the peer endpoint, if
 * possible, and any audio data will be captured from the device's default
 * audio mixer.
 * By default, this is enabled and the Server will attempt to negotiate an
 * audio channel with any connecting viewers.
 *
 * @param server The Server.
 * @param enable #vnc_true to enable audio playback, #vnc_false to disable.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval PeerNotSupported
 *     The peer endpoint does not support audio
 * 
 * @retval NotSupported
 *     This platform does not support audio
 *
 * @since 1.9
 */
VNC_SDK_API vnc_status_t
vnc_Server_enableAudio(vnc_Server* server,
                       vnc_bool_t enable);


/**
 * Obtains the Server's @ref vnc_AnnotationManager for handling annotation
 * operations.
 *
 * @param server The current Server.
 *
 * @return A @ref vnc_AnnotationManager, valid for the lifetime of the Server.
 *
 * @since 1.4
 */
VNC_SDK_API vnc_AnnotationManager*
vnc_Server_getAnnotationManager(vnc_Server* server);


/**
 * Obtains the Server's @ref vnc_MessagingManager for handling messaging.
 *
 * @return A @ref vnc_MessagingManager or NULL on error, in which case
 *     call vnc_getLastError() to get the error code.
 *
 * @retval NotEnabled
 *     The Messaging feature is not enabled for this Server.
 *
 * @since 1.5
 */
VNC_SDK_API vnc_MessagingManager*
vnc_Server_getMessagingManager(vnc_Server* server);


/**
 * Obtains the Server's @ref vnc_DisplayManager, for managing the list of
 * displays made available by the Server and for setting the Server's
 * capture method.
 *
 * @param server The current Server.
 * @return A @ref vnc_DisplayManager or NULL on error, in which case
 *     call vnc_getLastError() to get the error code.
 *
 * @since 1.5
 */
VNC_SDK_API vnc_DisplayManager*
vnc_Server_getDisplayManager(vnc_Server* server);


/**
 * Enumeration of encryption levels.
 *
 * @see vnc_Server_setEncryptionLevel()
 */
typedef enum {
  /**
   * Use strong encryption.  This is the default.
   */
  vnc_Server_EncryptionLevel_Default = 0,
  /**
   * Use the strongest available encryption, possibly at the cost of speed.
   */
  vnc_Server_EncryptionLevel_Maximum,
  /**
   * Allow the negotation of encryption levels, including no encryption.
   * Use with caution.
   * Requires a Third-Party Connectivity Add-on.
   */
  vnc_Server_EncryptionLevel_AllowUnencrypted,
} vnc_Server_EncryptionLevel;


/**
 * Sets the desired encryption level of the session from the range of options
 * enumerated by @ref vnc_Server_EncryptionLevel.
 *
 * This will not affect the encryption level of established connections.
 *
 * If a Viewer and Server select different encryption levels, connections
 * between them take place at the higher of their selected levels.
 *
 * @param server The current Server.
 * @param level The new encryption level.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The encryption level is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Server_setEncryptionLevel(vnc_Server* server,
                              vnc_Server_EncryptionLevel level);