src/server.rs

extern "C" {
    #[doc = " Specifies a friendly name for the Server, to send to connected Viewers."]
    #[doc = " By default, this is the device's hostname, plus the display number"]
    #[doc = " where appropriate."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param name The UTF-8-encoded friendly name."]
    pub fn vnc_Server_setFriendlyName(server: *mut vnc_Server, name: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Obtains the Server's @ref vnc_ConnectionHandler for performing connection"]
    #[doc = " operations."]
    #[doc = ""]
    #[doc = " Typically, a @ref vnc_ConnectionHandler is passed to"]
    #[doc = " vnc_CloudListener_create() to start the Server listening for connections."]
    #[doc = " However, you can reverse this methodology and pass it to"]
    #[doc = " vnc_CloudConnector_create() instead in order to connect to listening Viewers"]
    #[doc = " if you want (see Viewer.h for more information)."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = ""]
    #[doc = " @return A @ref vnc_ConnectionHandler, valid for the lifetime of the Server."]
    pub fn vnc_Server_getConnectionHandler(server: *mut vnc_Server) -> *mut vnc_ConnectionHandler;
}
extern "C" {
    #[doc = " Returns the address of a particular connected Viewer."]
    #[doc = ""]
    #[doc = " The format of the null-terminated string is"]
    #[doc = " <tt>[vnccloud:\\<cloud-address\\>]:\\<id\\></tt>"]
    #[doc = " Note the string is only guaranteed to be valid until the next method call."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param connection The connection whose Cloud address you want.  You can"]
    #[doc = "     obtain a @ref vnc_Connection from your callback function"]
    #[doc = "     vnc_Server_ConnectionCallback::connectionStarted."]
    #[doc = ""]
    #[doc = " @return A NULL-terminated string in the format"]
    #[doc = "     <tt>[vnccloud:\\<cloud-address\\>]:\\<id\\></tt>."]
    pub fn vnc_Server_getPeerAddress(
        server: *mut vnc_Server,
        connection: *mut vnc_Connection,
    ) -> *const ::std::os::raw::c_char;
}
#[doc = " The disconnection message is deemed to be sufficiently important that the"]
#[doc = " Viewer should alert the Viewer user."]
pub const vnc_Server_DisconnectFlags_vnc_Server_DisconnectAlert: vnc_Server_DisconnectFlags = 1;
#[doc = " Set the peer's @ref vnc_Viewer_CanReconnect flag, that is, the Server"]
#[doc = " informs the Viewer that the server may start again soon."]
pub const vnc_Server_DisconnectFlags_vnc_Server_DisconnectReconnect: vnc_Server_DisconnectFlags = 2;
#[doc = " Enumeration of disconnection flags."]
#[doc = ""]
#[doc = " @see vnc_Server_disconnect(), vnc_Server_disconnectAll()"]
#[doc = ""]
#[doc = " @since 1.1"]
pub type vnc_Server_DisconnectFlags = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Disconnects a particular Viewer, optionally specifying a message."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param connection The connection to terminate.  You can obtain a"]
    #[doc = "     @ref vnc_Connection from your callback function"]
    #[doc = "     vnc_Server_ConnectionCallback::connectionStarted."]
    #[doc = " @param message The message to send to the Viewer."]
    #[doc = " @param flags Zero or more of the @ref vnc_Server_DisconnectFlags flags."]
    #[doc = ""]
    #[doc = " @see vnc_Viewer_getDisconnectMessage()"]
    pub fn vnc_Server_disconnect(
        server: *mut vnc_Server,
        connection: *mut vnc_Connection,
        message: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Disconnects all Viewers, optionally specifying a message."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param message The message to send to all Viewers."]
    #[doc = " @param flags Zero or more of the @ref vnc_Server_DisconnectFlags flags."]
    #[doc = ""]
    #[doc = " @see vnc_Viewer_getDisconnectMessage()"]
    pub fn vnc_Server_disconnectAll(
        server: *mut vnc_Server,
        message: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Specifies a blacklist threshold and timeout for the Server.  By default,"]
    #[doc = " the threshold is 5, which means that a Viewer failing to authenticate five"]
    #[doc = " times in a row is blacklisted for the default timeout of 10 seconds.  This"]
    #[doc = " guards against brute-force and dictionary attacks."]
    #[doc = ""]
    #[doc = " To completely disable blacklisting, set @p threshold and @p timeout to 0."]
    #[doc = " For security reasons this is not recommended."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param threshold A number of unsuccessful authentication attempts before"]
    #[doc = "     blacklisting."]
    #[doc = " @param timeout A number of seconds before a blacklisted Viewer can attempt"]
    #[doc = "     to authenticate again."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @p timeout is zero or negative"]
    pub fn vnc_Server_setBlacklist(
        server: *mut vnc_Server,
        threshold: ::std::os::raw::c_int,
        timeout: ::std::os::raw::c_int,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Handles a Windows Service control event.  When Server has been created via"]
    #[doc = " vnc_Server_createService(), then Windows Service control events must be"]
    #[doc = " forwarded to the Server so that active session can be determined. See the"]
    #[doc = " Win32 function"]
    #[doc = " <a href=\"https://msdn.microsoft.com/en-us/library/windows/desktop/ms685058(v=vs.85).aspx\">RegisterServiceCtrlHandlerEx</a>"]
    #[doc = " and the <a href=\"https://msdn.microsoft.com/en-us/library/windows/desktop/ms683241(v=vs.85).aspx\">HandlerEx</a>"]
    #[doc = " callback for more information."]
    #[doc = ""]
    #[doc = " This function can be called for all notifications received via your @c HandlerEx"]
    #[doc = " callback, but in particular it must be called for notifications where the"]
    #[doc = " control code (@p dwControl) is @c SERVICE_CONTROL_SESSIONCHANGE."]
    #[doc = ""]
    #[doc = " This method is designed to be called from the Service Control Dispatcher"]
    #[doc = " thread, rather than the thread which called vnc_init()."]
    #[doc = ""]
    #[doc = " @param dwControl The control code passed to @c HandlerEx"]
    #[doc = " @param dwEventType The type of event passed to @c HandlerEx"]
    #[doc = " @param lpEventData The event data passed to @c HandlerEx"]
    #[doc = ""]
    #[doc = " @since 1.1"]
    pub fn vnc_Server_serviceControlHandlerEx(
        server: *mut vnc_Server,
        dwControl: ::std::os::raw::c_int,
        dwEventType: ::std::os::raw::c_int,
        lpEventData: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = " Enables transmission of audio from the Server to the Viewer. The audio"]
    #[doc = " stream will be automatically negotiated with the peer endpoint, if"]
    #[doc = " possible, and any audio data will be captured from the device's default"]
    #[doc = " audio mixer."]
    #[doc = " By default, this is enabled and the Server will attempt to negotiate an"]
    #[doc = " audio channel with any connecting viewers."]
    #[doc = ""]
    #[doc = " @param server The Server."]
    #[doc = " @param enable #vnc_true to enable audio playback, #vnc_false to disable."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval PeerNotSupported"]
    #[doc = "     The peer endpoint does not support audio"]
    #[doc = ""]
    #[doc = " @retval NotSupported"]
    #[doc = "     This platform does not support audio"]
    #[doc = ""]
    #[doc = " @since 1.9"]
    pub fn vnc_Server_enableAudio(server: *mut vnc_Server, enable: vnc_bool_t) -> vnc_status_t;
}
extern "C" {
    #[doc = " Obtains the Server's @ref vnc_AnnotationManager for handling annotation"]
    #[doc = " operations."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = ""]
    #[doc = " @return A @ref vnc_AnnotationManager, valid for the lifetime of the Server."]
    #[doc = ""]
    #[doc = " @since 1.4"]
    pub fn vnc_Server_getAnnotationManager(server: *mut vnc_Server) -> *mut vnc_AnnotationManager;
}
extern "C" {
    #[doc = " Obtains the Server's @ref vnc_MessagingManager for handling messaging."]
    #[doc = ""]
    #[doc = " @return A @ref vnc_MessagingManager or NULL on error, in which case"]
    #[doc = "     call vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval NotEnabled"]
    #[doc = "     The Messaging feature is not enabled for this Server."]
    #[doc = ""]
    #[doc = " @since 1.5"]
    pub fn vnc_Server_getMessagingManager(server: *mut vnc_Server) -> *mut vnc_MessagingManager;
}
extern "C" {
    #[doc = " Obtains the Server's @ref vnc_DisplayManager, for managing the list of"]
    #[doc = " displays made available by the Server and for setting the Server's"]
    #[doc = " capture method."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @return A @ref vnc_DisplayManager or NULL on error, in which case"]
    #[doc = "     call vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @since 1.5"]
    pub fn vnc_Server_getDisplayManager(server: *mut vnc_Server) -> *mut vnc_DisplayManager;
}
#[doc = " Use strong encryption.  This is the default."]
pub const vnc_Server_EncryptionLevel_vnc_Server_EncryptionLevel_Default:
    vnc_Server_EncryptionLevel = 0;
#[doc = " Use the strongest available encryption, possibly at the cost of speed."]
pub const vnc_Server_EncryptionLevel_vnc_Server_EncryptionLevel_Maximum:
    vnc_Server_EncryptionLevel = 1;
#[doc = " Allow the negotation of encryption levels, including no encryption."]
#[doc = " Use with caution."]
#[doc = " Requires a Third-Party Connectivity Add-on."]
pub const vnc_Server_EncryptionLevel_vnc_Server_EncryptionLevel_AllowUnencrypted:
    vnc_Server_EncryptionLevel = 2;
#[doc = " Enumeration of encryption levels."]
#[doc = ""]
#[doc = " @see vnc_Server_setEncryptionLevel()"]
pub type vnc_Server_EncryptionLevel = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Sets the desired encryption level of the session from the range of options"]
    #[doc = " enumerated by @ref vnc_Server_EncryptionLevel."]
    #[doc = ""]
    #[doc = " This will not affect the encryption level of established connections."]
    #[doc = ""]
    #[doc = " If a Viewer and Server select different encryption levels, connections"]
    #[doc = " between them take place at the higher of their selected levels."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param level The new encryption level."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The encryption level is invalid"]
    pub fn vnc_Server_setEncryptionLevel(
        server: *mut vnc_Server,
        level: vnc_Server_EncryptionLevel,
    ) -> vnc_status_t;
}
